--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Run build
-      run: npm run build
+      run: ip a
 
   move_files:
     runs-on: ubuntu-latest
