--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
       run: npm install
 
     - name: Run build
-      run: npm run build
+      run: node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --prod
+
 
   move_files:
     runs-on: ubuntu-latest
