--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,9 @@ jobs:
         node-version: '14' 
 
     - name: Install dependencies
-      run: npm install
-    
-    - name: Run build
-      run: npm uninstall -g @angular/cli
-    
-    - name: Run build
-      run: npm install -g @angular/cli --force
-
-    - name: Run build
-      run: node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --prod
+      run: node -v
+    - name: Install dependencies
+      run: npm -v
 
 
   move_files:
