--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,27 +7,20 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14.x'
+      - run: npm install 
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14' 
-
-    - name: Install dependencies
-      run: npm install
-    
-    - name: Run build
-      run: npm uninstall -g @angular/cli
-    
-    - name: Run build
-      run: npm install -g @angular/cli --force
-
-    - name: Run build
-      run: node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --prod
 
 
   move_files:
